apps/base/dev-concourse/deploy/concourse/web/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app.kubernetes.io/name: concourse-web
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: concourse-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: concourse-web
    spec:
      serviceAccountName: web
      containers:
        - name: web
          image: "concourse/concourse:7.9.1"
          imagePullPolicy: "IfNotPresent"
          args: ["web"]
          ports:
            - name: atc
              containerPort: 8080
            - name: tsa
              containerPort: 2222
            - name: atc-debug
              containerPort: 8079
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/v1/info
              port: atc
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/v1/info
              port: atc
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
              readOnly: true
            - name: cluster-ca-volume
              mountPath: /etc/ssl/cluster/ca.cert
              subPath: ca.crt
            - name: web-keys
              mountPath: "/concourse-keys"
              readOnly: true
            #- name: auth-keys
            #  mountPath: "/concourse-auth"
            #  readOnly: true
            - name: cluster-ca-volume
              mountPath: /var/lib/lemonldap-ng/server-certs/ca.crt
              subPath: ca.crt
      nodeSelector:
        capability/general-purpose: 'yes'
      volumes:
        - name: tz-config
          hostPath:
            path: /etc/localtime
        - name: cluster-ca-volume
          secret:
            secretName: cluster-ca
        - name: web-keys
          secret:
            secretName: web-keys
            defaultMode: 0400
            items:
              - key: tsa_host_key
                path: tsa_host_key
              - key: session_signing_key
                path: session_signing_key
              - key: worker_key.pub
                path: worker_key.pub
        #- name: auth-keys
        #  secret:
        #    secretName: web
        #    defaultMode: 0400
        #    items:
