apps/base/dev-concourse/deploy/concourse/web/web-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-lb
spec:
  type: LoadBalancer
  loadBalancerIP: 1.2.3.4
  externalTrafficPolicy: Local
  ports:
  - name: atc
    port: 8080
    targetPort: atc
  selector:
    app.kubernetes.io/name: concourse-web
