apps/base/dev-concourse/deploy/concourse/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  ports:
  - name: atc
    port: 8080
    targetPort: atc
  - name: tsa
    port: 2222
    targetPort: tsa
  selector:
    app.kubernetes.io/name: concourse-web
