apps/base/dev-concourse/deploy/concourse/web/web-worker-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-worker-gateway
spec:
  type: ClusterIP
  ports:
    - name: worker-gateway
      port: 2222
      targetPort: tsa
  selector:
    app.kubernetes.io/name: concourse-web
