apps/base/dev-concourse/deploy/concourse/web/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-concourse-web
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: concourse-web
  ingress:
    # Allow from the ingress controller
    - ports:
        - port: atc
      from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
    # Allow from workers
    - ports:
        - port: tsa
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: concourse-worker

    # Allow from all (required to use the fly CLI)
    - ports:
        - port: atc
